# diri-agent-testing-utils

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/codeql/: README.md  codeql-config.yml
.github/workflows/: ci.yml
src/diri_agent_testing_utils/: __init__.py  types.py
src/diri_agent_testing_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/diri_agent_testing_utils/fixtures/: __init__.py  pytest_fixtures.py
src/diri_agent_testing_utils/harness/: __init__.py  conversation.py  test_harness.py  trace.py
src/diri_agent_testing_utils/mocks/: __init__.py  services.py  tool_registry.py
src/diri_agent_testing_utils/providers/: __init__.py  fake_llm.py  protocols.py
tests/: conftest.py  test_fake_llm.py  test_fixtures.py  test_harness.py  test_mocks.py  test_scripted_llm.py
