[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diri-agent-testing-utils"
version = "0.1.0"
description = "Pytest fixtures, mocks, and test harness for AI agent testing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pytest>=7.0.0",
]

[project.optional-dependencies]
async = ["pytest-asyncio>=0.21.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.entry-points."pytest11"]
diri_agent_testing = "diri_agent_testing_utils.fixtures.pytest_fixtures"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
